--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,13 @@
 
 
 # ==== ==== ==== ==== ====
+# TensorFlow
+# ==== ==== ==== ===
+
+logdir/
+
+
+# ==== ==== ==== ==== ====
 # Python
 # ==== ==== ==== ===
 
