--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,13 @@ logdir/
 
 
 # ==== ==== ==== ==== ====
+# Numpy
+# ==== ==== ==== ===
+
+*.npz
+*.npy
+
+# ==== ==== ==== ==== ====
 # Python
 # ==== ==== ==== ===
 
